syntax = "proto3";

package proto.auth;

option go_package = "./auth";
import "google/api/annotations.proto";

service Auth {
  rpc AuthWithCredentialsV1(AuthWithCredentialsV1Request) returns (AccessRefreshTokens) {
    option (google.api.http) = { post: "/api/v1/auth/with/credentials"; body: "*"; };
  };

  rpc AuthWithAccessTokenV1(AuthWithAccessTokenV1Request) returns (AuthWithAccessTokenV1Response) {
    option (google.api.http) = { post: "/api/v1/auth/with/access/token"; body: "*"; };
  };

  rpc RefreshTokensV1(AccessRefreshTokens) returns (AccessRefreshTokens){
    option (google.api.http) = { post: "/api/v1/access/refresh/token"; body: "*"; };
  };
}

message AccessRefreshTokens {
  string access_token = 1;
  string refresh_token = 2;
}

message AuthWithCredentialsV1Request {
  string email = 1;
  string password = 2;
}

message AuthWithAccessTokenV1Request {
  string access_token = 1;
}

message AuthWithAccessTokenV1Response {}






